--- a/account/templates/accounts/navbar.html
+++ b/account/templates/accounts/navbar.html
@@ -9,13 +9,10 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Dashboard </a>
+          <a class="nav-link" href="{% url 'home' %}">Dashboard </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Costumers</a>
+          <a class="nav-link" href="{% url 'products' %}">Products</a>
         </li>
           </div>
         </li>
