--- a/account/templates/accounts/navbar.html
+++ b/account/templates/accounts/navbar.html
@@ -16,6 +16,7 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
+      {% if request.user.is_staff  %}
         <li class="nav-item active">
           <a class="nav-link" href="{% url 'home' %}">Dashboard </a>
         </li>
@@ -24,6 +25,7 @@
         </li>
           </div>
         </li>
+        {% endif %}
       </ul>
     </div>
   <span class="hello-msg">Hello, {{request.user}}</span>
