--- a/account/templates/accounts/navbar.html
+++ b/account/templates/accounts/navbar.html
@@ -23,7 +23,9 @@
         <li class="nav-item">
           <a class="nav-link" href="{% url 'products' %}">Products</a>
         </li>
-          </div>
+        {% else %}
+        <li class="nav-item">
+        <a class="nav-link" href="{% url 'account' %}">Settings</a>
         </li>
         {% endif %}
       </ul>
