--- a/account/templates/accounts/login.html
+++ b/account/templates/accounts/login.html
@@ -118,6 +118,11 @@
 					<div class="d-flex justify-content-center links">
 						Don't have an account? <a href="{% url 'register' %}" class="ml-2">Sign Up</a>
 					</div>
+									<div class="mt-4">
+					<div class="d-flex justify-content-center links">
+						Forgot passowrd? <a href="{% url 'reset_password' %}" class="ml-2">Reset Password</a>
+					</div>
+			
 			
 				</div>
 			</div>
